@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2006 Voltaire Inc.  All rights reserved.
+ * Copyright (c) 2004-2007 Voltaire Inc.  All rights reserved.
  *
  * This software is available to you under a choice of one of two
  * licenses.  You may choose to be licensed under the terms of the GNU
@@ -522,7 +522,7 @@ mad_dump_opervls(char *buf, int bufsz, void *val, int valsz)
 void
 mad_dump_portcapmask(char *buf, int bufsz, void *val, int valsz)
 {
-	uint mask = *(uint *)val;
+	unsigned mask = *(unsigned *)val;
 	char *s = buf;
 
 	s += sprintf(s, "0x%x\n", mask);
