@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2006 Voltaire Inc.  All rights reserved.
+ * Copyright (c) 2004-2007 Voltaire Inc.  All rights reserved.
  *
  * This software is available to you under a choice of one of two
  * licenses.  You may choose to be licensed under the terms of the GNU
@@ -50,7 +50,7 @@
 
 uint8_t *
 sa_rpc_call(void *ibmad_port, void *rcvbuf, ib_portid_t *portid,
-	    ib_sa_call_t *sa, uint timeout)
+	    ib_sa_call_t *sa, unsigned timeout)
 {
 	ib_rpc_t rpc = {0};
 	uint8_t *p;
